--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "minimalist_fast_website",
   "version": "1.0.0",
   "description": "## Problem Statement",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "devDependencies": {
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
