--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +20,14 @@
   "homepage": "https://github.com/kumudug/mimalist_fast_website#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "csv-loader": "^3.0.3",
+    "json5": "^2.1.3",
     "style-loader": "^2.0.0",
+    "toml": "^3.0.0",
     "webpack": "^5.10.1",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.20"
