--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "toml": "^3.0.0",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-nano": "^1.1.1",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
