--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## Problem Statement",
   "private": true,
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,12 +20,19 @@
   },
   "homepage": "https://github.com/kumudug/mimalist_fast_website#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "webpack": "^5.10.1",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-merge": "^5.7.0",
+    "webpack-nano": "^1.1.1"
   },
-  "dependencies": {
-    "lodash": "^4.17.20"
-  }
+  "dependencies": {}
 }
