--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
