Get material working
* Import material button
* Add configs to sass loader to include from node_modules
* Test out material button

--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "webpack-merge": "^5.7.0",
     "webpack-nano": "^1.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@material/button": "^8.0.0"
+  }
 }
