--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-webpack-plugin": "^2.4.1",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss-loader": "^4.1.0",
